Mudança na estrutura html inserindo a pagina de cadastro

--- a/index.html
+++ b/index.html
@@ -4,23 +4,35 @@
 	<title>Projeto POO/LAEC</title>
 </head>
 <body>
-	<header>
-	  <h1>Nome App</h1>
-	  <p>cadastre-se</p>
-	</header>
-	<div id="corpo">
-	  <div>
-	    <p>serie 1</p>
+	<div id="pagina-1">
+	  <header id="cabeçalho cadastro">
+	    <h1>Cadastro</h1>
+	  </header>
+	  <div id="pagina cadastro"> 
+	    <form>
+	      <div>
+		<label for="nome">Nome:</label>
+		<input type="text" id="nome_user"/>
+	      </div>
+	      <div>
+		<label for="email">Email:</label>
+		<input type="text" id="email_user"/>
+	      </div>
+	      <div>
+		<label for="senha">Senha:</label>
+		<input type="password" id="senha_user"/>
+	      </div>
+	      <div>
+		<label for="nascimento">Data de Nascimento:</label>
+		<input type="date" id="nasc_user"/>
+	      </div>
+	      <input type="button" value="Cadastrar" onclick=" ">
+	    </form>
 	  </div>
-	  <div>
-	    <p>serie 2</p>
-	  </div>
-	  <div>
-	    <p>serie 3</p>
-	  </div>
-	  <div>
-	    <p>serie 4</p>
-	  </div>
+	</div>
+	<div id="pagina-2"></div>
+	<div id="pagina-3"></div>
+
 </div>
 </body>
 </html>
